tests/local_inference_annotations/local_inference_annotations.exp
Error ---------------------------------------------------------------------------------------------------- array.js:5:16

Missing an annotation on `x`. [missing-local-annot]

   5|     const a = (x) => 3; // Missing annot
                     ^


Error --------------------------------------------------------------------------------------------------- array.js:11:18

Missing an annotation on `x`. [missing-local-annot]

   11|       const b = (x) => 3; // Missing annot
                        ^


Error ------------------------------------------------------------------------------------------------ assignment.js:6:6

Missing an annotation on `x`. [missing-local-annot]

   6| y = (x) => 3; // Missing annot
           ^


Error ------------------------------------------------------------------------------------------------ assignment.js:9:6

Missing an annotation on `x`. [missing-local-annot]

   9| a = (x) => x; // Errors, but could be supported
           ^


Error ---------------------------------------------------------------------------------------------- assignment.js:10:12

Missing an annotation on `y`. [missing-local-annot]

   10| [a, b] = [(y) => y , (y) => y]; // Errors, but could be supported
                  ^


Error ---------------------------------------------------------------------------------------------- assignment.js:10:23

Missing an annotation on `y`. [missing-local-annot]

   10| [a, b] = [(y) => y , (y) => y]; // Errors, but could be supported
                             ^


Error ----------------------------------------------------------------------------------------------- assignment.js:13:6

Missing an annotation on `x`. [missing-local-annot]

   13| c = (x) => 3; // Missing annot
            ^


Error ----------------------------------------------------------------------------------------------- assignment.js:19:6

Missing an annotation on `x`. [missing-local-annot]

   19| e = (x) => 3; // Missing annot
            ^


Error --------------------------------------------------------------------------------------------------- block.js:14:16

Missing an annotation on `y`. [missing-local-annot]

   14|     const x = (y) => 3;  // error y missing an annotation
                      ^


Error ----------------------------------------------------------------------------------------------------- call.js:9:14

Missing an annotation on `x`. [missing-local-annot]

   9|   const a = (x) => 3; // Required annot
                   ^


Error ----------------------------------------------------------------------------------------------------- call.js:12:8

Property `@@iterator` is missing in function [1] but exists in `$Iterable` [2]. [prop-missing]

   call.js:12:8
     12| }, ...((x) => 3));
                ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1650:11
   1650| interface $Iterable<+Yield,+Return,-Next> {
                   ^^^^^^^^^ [2]


Error ----------------------------------------------------------------------------------------------------- cast.js:6:15

Missing an annotation on `x`. [missing-local-annot]

   6|   const b = ((x) => 3)(3); // This x does not
                    ^


Error ----------------------------------------------------------------------------------------------------- cast.js:7:14

Missing an annotation on `x`. [missing-local-annot]

   7|   const c = (x) => 3; // Neither does this one
                   ^


Error ---------------------------------------------------------------------------------------------------- cast.js:13:15

Missing an annotation on `x`. [missing-local-annot]

   13|   const b = ((x) => 3)(3); // This x does not
                     ^


Error ---------------------------------------------------------------------------------------------------- cast.js:14:14

Missing an annotation on `x`. [missing-local-annot]

   14|   const c = (x) => 3; // Neither does this one
                    ^


Error ---------------------------------------------------------------------------------------------------- class.js:3:10

Missing an annotation on `param`. [missing-local-annot]

   3|   method(param): any { // error on param
               ^^^^^


Error ----------------------------------------------------------------------------------------------------- class.js:4:6

Missing an annotation on `x`. [missing-local-annot]

   4|     (x) => 3; // error
           ^


Error ---------------------------------------------------------------------------------------------------- class.js:8:16

Missing an annotation on `x`. [missing-local-annot]

   8|   property1 = (x) => 3; // error
                     ^


Error ------------------------------------------------------------------------------------------ class_expression.js:4:6

Missing an annotation on `x`. [missing-local-annot]

   4|     (x) => 3; // error
           ^


Error --------------------------------------------------------------------------------------- destructuring_init.js:4:14

Missing an annotation on `x`. [missing-local-annot]

   4|   const d = (x) => 3;
                   ^


Error ---------------------------------------------------------------------------------------- destructuring_init.js:9:8

Property `x` is missing in statics of function type [1]. [prop-missing]

   destructuring_init.js:9:8
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
             ^

References:
   destructuring_init.js:9:21
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
                          ^^^^^^^^^^^^^^ [1]


Error --------------------------------------------------------------------------------------- destructuring_init.js:9:14

Property `y` is missing in statics of function type [1]. [prop-missing]

   destructuring_init.js:9:14
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
                   ^

References:
   destructuring_init.js:9:21
   9| const {x: b, y: c}: number => void = (x) => { // This x has an annot available
                          ^^^^^^^^^^^^^^ [1]


Error -------------------------------------------------------------------------------------- destructuring_init.js:10:15

Missing an annotation on `x`. [missing-local-annot]

   10|   const b = ((x) => 3)(3); // This x does not
                     ^


Error -------------------------------------------------------------------------------------- destructuring_init.js:11:14

Missing an annotation on `x`. [missing-local-annot]

   11|   const c = (x) => 3; // Neither does this one
                    ^


Error ------------------------------------------------------------------------------------------------- do_while.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error ------------------------------------------------------------------------------------------------ do_while.js:11:11

Missing an annotation on `x`. [missing-local-annot]

   11|   while ((x) => 3); // guard is not covered!
                 ^


Error ------------------------------------------------------------------------------------------------- do_while.js:12:3

Unreachable code. [unreachable-code]

   12|   return (y) => 3;
         ^^^^^^^^^^^^^^^^


Error ------------------------------------------------------------------------------------------------------- for.js:7:9

Missing an annotation on `x`. [missing-local-annot]

   7|   for ((x) => true; (x) => true; (x) => true) { // init, test, and update are all not covered by the annot 
              ^


Error ------------------------------------------------------------------------------------------------------ for.js:7:22

Missing an annotation on `x`. [missing-local-annot]

   7|   for ((x) => true; (x) => true; (x) => true) { // init, test, and update are all not covered by the annot 
                           ^


Error ------------------------------------------------------------------------------------------------------ for.js:7:35

Missing an annotation on `x`. [missing-local-annot]

   7|   for ((x) => true; (x) => true; (x) => true) { // init, test, and update are all not covered by the annot 
                                        ^


Error ------------------------------------------------------------------------------------------------------ for.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error --------------------------------------------------------------------------------------------------- for_in.js:7:19

Missing an annotation on `x`. [missing-local-annot]

   7|   for (let x in ((x) => 3)) { // Only the body is covered, missing annot!
                        ^


Error --------------------------------------------------------------------------------------------------- for_in.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error --------------------------------------------------------------------------------------------------- for_of.js:7:18

Property `@@iterator` is missing in function [1] but exists in `$Iterable` [2]. [prop-missing]

   for_of.js:7:18
      7|   for (let x of ((x) => 3)) { // Only the body is covered, missing annot! Also a type error
                          ^^^^^^^^ [1]

References:
   <BUILTINS>/core.js:1650:11
   1650| interface $Iterable<+Yield,+Return,-Next> {
                   ^^^^^^^^^ [2]


Error --------------------------------------------------------------------------------------------------- for_of.js:7:19

Missing an annotation on `x`. [missing-local-annot]

   7|   for (let x of ((x) => 3)) { // Only the body is covered, missing annot! Also a type error
                        ^


Error --------------------------------------------------------------------------------------------------- for_of.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^


Error -------------------------------------------------------------------------------------------------- id_init.js:6:15

Missing an annotation on `x`. [missing-local-annot]

   6|   const b = ((x) => 3)(3); // This x does not
                    ^


Error -------------------------------------------------------------------------------------------------- id_init.js:7:14

Missing an annotation on `x`. [missing-local-annot]

   7|   const c = (x) => 3; // Neither does this one
                   ^


Error -------------------------------------------------------------------------------------------------------- if.js:7:9

Missing an annotation on `x`. [missing-local-annot]

   7|   if (((x) => true) ()){ // Guards are not covered by the annot
              ^


Error ------------------------------------------------------------------------------------------------------ if.js:10:16

Missing an annotation on `x`. [missing-local-annot]

   10|     const z = (x) => 3; // Non-return statements are not covered by the annot
                      ^


Error ------------------------------------------------------------------------------------------------------ jsx.js:9:14

Missing an annotation on `x`. [missing-local-annot]

   9|   const y = (x) => 3; // error, required annot
                   ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:3:12

Missing an annotation on `x`. [missing-local-annot]

   3| function f(x): void {}
                 ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:4:32

Missing an annotation on `x`. [missing-local-annot]

   4| const function_expr = function(x): void {};
                                     ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:5:21

Missing an annotation on `x`. [missing-local-annot]

   5| const arrow_expr = (x) => {};
                          ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:6:49

Missing an annotation on `x`. [missing-local-annot]

   6| const deep_function_expr = {f: {g: {h: function(x): void {}}}};
                                                      ^


Error ------------------------------------------------------------------------------------------------ no_annots.js:7:38

Missing an annotation on `x`. [missing-local-annot]

   7| const deep_arrow_expr = {f: {g: {h: (x) => void {}}}};
                                           ^


Error --------------------------------------------------------------------------------------------------- object.js:5:16

Missing an annotation on `x`. [missing-local-annot]

   5|     const a = (x) => 3; // Missing annot
                     ^


Error --------------------------------------------------------------------------------------------------- object.js:9:16

Missing an annotation on `x`. [missing-local-annot]

   9|     const b = (x) => 3; // Missing annot
                     ^


Error -------------------------------------------------------------------------------------------------- object.js:17:16

Missing an annotation on `x`. [missing-local-annot]

   17|     const c = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:21:16

Missing an annotation on `x`. [missing-local-annot]

   21|     const d = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:26:16

Missing an annotation on `x`. [missing-local-annot]

   26|     const e = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:30:16

Missing an annotation on `x`. [missing-local-annot]

   30|     const f = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:34:16

Missing an annotation on `x`. [missing-local-annot]

   34|     const g = (x) => 3; // Missing annot
                      ^


Error -------------------------------------------------------------------------------------------------- object.js:38:16

Missing an annotation on `x`. [missing-local-annot]

   38|     const h = (x) => 3; // Missing annot
                      ^


Error --------------------------------------------------------------------------------------------------- return.js:7:22

Missing an annotation on `z`. [missing-local-annot]

   7| let b = ((x => y => (z => 3)(3)): number => number => number); // annot missing on z
                           ^


Error -------------------------------------------------------------------------------------------------- return.js:11:40

Missing an annotation on `z`. [missing-local-annot]

   11| let d = ((x => { return y => { return (z => 3)(3) }}): number => number => number); // annot missing on z
                                              ^


Error -------------------------------------------------------------------------------------------------- return.js:15:15

Missing an annotation on `x`. [missing-local-annot]

   15|   const xx = (x) => 3; // Missing annot on x
                     ^


Error -------------------------------------------------------------------------------------------------- return.js:17:16

Missing an annotation on `x`. [missing-local-annot]

   17|     const z = (x) => 3; // Missing annot on x
                      ^


Error --------------------------------------------------------------------------------------------------- switch.js:7:12

Missing an annotation on `x`. [missing-local-annot]

   7|   switch ((x) => true){ // Guards are not covered by the annot
                 ^


Error -------------------------------------------------------------------------------------------------- switch.js:11:18

Missing an annotation on `x`. [missing-local-annot]

   11|       const z = (x) => 3; // Non-return statements are not covered by the annot
                        ^


Error ----------------------------------------------------------------------------------------------------- this.js:2:13

Missing an annotation on implicit `this` parameter of function. [missing-local-annot]

   2| function foo() {return this.x;}
                  ^^


Error ---------------------------------------------------------------------------------------------------- this.js:18:18

Missing an annotation on implicit `this` parameter of function. [missing-local-annot]

   18| let f = function () { return this.x }
                        ^^


Error ---------------------------------------------------------------------------------------- try_catch_finally.js:8:16

Missing an annotation on `x`. [missing-local-annot]

   8|     const z = (x) => 3; // Non-return statements are not covered by the annot
                     ^


Error --------------------------------------------------------------------------------------- try_catch_finally.js:11:16

Missing an annotation on `x`. [missing-local-annot]

   11|     const z = (x) => 3; // Non-return statements are not covered by the annot
                      ^


Error --------------------------------------------------------------------------------------- try_catch_finally.js:14:16

Missing an annotation on `x`. [missing-local-annot]

   14|     const z = (x) => 3; // Non-return statements are not covered by the annot
                      ^


Error ---------------------------------------------------------------------------------------------------- while.js:7:11

Missing an annotation on `x`. [missing-local-annot]

   7|   while ((x) => 3) { // Only the body is covered, missing annot!
                ^


Error ---------------------------------------------------------------------------------------------------- while.js:8:16

Missing an annotation on `y`. [missing-local-annot]

   8|     const x = (y) => 3; // non-return, not covered!
                     ^



Found 67 errors
